--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -24,24 +24,6 @@ jobs:
       - name: Build NestJS app
         run: npm run build
 
-      - name: Run tests
-        run: npm test
+      - name: Run start
+        run: npm run start
 
-  deploy:
-    runs-on: windows-latest
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Deploy to IIS
-        run: |
-          $path = 'C:\inetpub\wwwroot\my-nestjs-app'
-          if (Test-Path $path) {
-            Remove-Item $path\* -Recurse -Force
-          } else {
-            New-Item -Path $path -ItemType Directory
-          }
-          Copy-Item -Path .\dist\* -Destination $path -Recurse
-        shell: pwsh
