--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Build NestJS app
         run: npm run build
 
-      - name: Run start
-        run: npm run start
+      - name: Run test
+        run: npm test
 
