--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,11 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - master
+    branches: ["master"]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
