--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,7 @@ jobs:
       - name: Build NestJS app
         run: npm run build
 
+      - name: Copy web.config to dist
+        run: cp web.config dist/
+
 
