--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
   "version": 2,
-  "build": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
+  "builds": [
+    { "src": "dist/main.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/dist/main.js"
-    }
+    { "src": "/(.*)", "dest": "dist/main.js" }
   ]
 }
