--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
     { "src": "dist/main.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "dist/main.js" }
+    { "src": "/(.*)", 
+    "dest": "dist/main.js",
+    "methods":[
+        "GET",
+        "POST",
+        "PATCH",
+        "DELETE"
+    ]
+}
   ]
 }
