--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && npm run copy",
+    "build": "nest build",
     "copy": "copy \"package.json\" \"dist/\" && copy \"web.config\" \"dist/\" && copy \".env\" \"dist/\" && copy \"tsconfig.json\" \"dist/\"",
     
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
