--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,6 @@ jobs:
         run: npm run build
 
       - name: Restart IIS
-        run: iisreset
-        shell: powershell
+        run: |
+          iisreset
+        shell: pwsh
