--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: windowns-latest
+    runs-on: windows-latest
     strategy:
       matrix:
         node-version: [16.x, 18.x]
