--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Fix vulnerabilities
+        run: npm audit fix
+
       - name: Build project
         run: npm run build
