--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URI=mongodb://localhost:27017
+DATABASE_URI=mongodb://127.0.0.1:27017
 DATABASE_NAME=nest
 JwtSecret=thienthanh@@
 ROLE_KEY=thienthanh@@
